# skills_api

./: .dockerignore  .env.example  .flake8  .gitignore  .gitignore.gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.dev-ci.yml  docker-compose.prod-ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci-test.yml  deploy-cd.yml  deploy-dev-cd.yml  deploy-prod-cd.yml  dev-ci.yml  django-test.yml  release-ci.yml
apps/: .coveragerc  data.json  manage.py  pytest.ini
apps/courses/: admin.py  apps.py  managers.py  mapping.py  models.py  permissions.py  serializers.py  services.py  typing.py  urls.py  views.py
apps/files/: admin.py  models.py  serializers.py  service.py  views.py
apps/procollab_skills/: __init__.py  auth.py  celery.py  decorators.py  middleware.py  permissions.py  schema.py  settings.py  urls.py
apps/progress/: admin.py  apps.py  constants.py  exceptions.py  filters.py  models.py  (+11 more)
courses/: admin.py  courses_api_specs.yaml  mapping.py  models.py  serializers.py  specs.py  urls.py  views.py
files/: admin.py  models.py  service.py  urls.py  views.py
nginx/: Dockerfile  Dockerfile_prod  nginx-dev.conf  nginx-prod.conf  nginx.conf
procollab_skills/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
progress/: admin.py  apps.py  mapping.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py
questions/: admin.py  apps.py  mapping.py  models.py  serializers.py  urls.py  views.py
scripts/: celery.sh  startup.sh  startup_dev.sh  startup_prod.sh
subscription/: apps.py  mapping.py  models.py  serializers.py  tasks.py  urls.py  views.py
(+209 files in other folders)
